[package]
name = "meshtouch-relay"
version = "0.1.0"
edition = "2021"
description = "MeshRelay — Encrypted message relay daemon for the hybrid mesh network"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }
reqwest = { version = "0.11", features = ["json"] }

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
